[gd_scene load_steps=4 format=3 uid="uid://bs8uta2dwmohx"]

[ext_resource type="Script" uid="uid://cpxlfkt28d6wh" path="res://escenas/componentes/ui/hud/hud.gd" id="1_lxigr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1fp6"]
bg_color = Color(4.23551e-06, 0.724109, 0.241617, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4svo6"]
bg_color = Color(0.228232, 0.616047, 0.978088, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lxigr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="BarraContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="BarraVida" type="HBoxContainer" parent="MarginContainer/BarraContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/BarraContainer/BarraVida"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_u1fp6")
value = 52.0
show_percentage = false

[node name="NumeroVida" type="Label" parent="MarginContainer/BarraContainer/BarraVida"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "32"

[node name="BarraEnergia" type="HBoxContainer" parent="MarginContainer/BarraContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/BarraContainer/BarraEnergia"]
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_4svo6")
value = 20.0
show_percentage = false

[node name="NumeroEnergia" type="Label" parent="MarginContainer/BarraContainer/BarraEnergia"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "78"

[node name="MonedasContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MonedasContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MonedasContainer"]
layout_mode = 2
